# SpectrumSerivce

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_redis.sh
Api/: Api.cpp  Api.hpp
Base/: Base.cpp  Base.hpp
Functions/: GetNoneFunc.hpp  GetSpectrum.hpp  GetSpectrums.hpp  GetWaveForm.hpp  IFunctions.cpp  IFunctions.hpp
IApi/: IApi.cpp  IApi.hpp
IBase/: IBase.cpp  IBase.hpp
ServiceResponse/: ServiceResponse.cpp  ServiceResponse.hpp
Spectrum/: Spectrum.hpp
cmake_build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake  radius_spectrums_software_next
lib/: rs.hpp
